<resources>
    <string name="app_name">DijooV2</string>
    <string name="cancel">CANCEL</string>
    <!-- For Update -->
    <string name="confirm_exit">Press Back button again to exit</string>
    <string name="total">Total</string>
    <string name="Times">Times</string>
    <string name="Units">Unit of Measurement</string>

    <string name="action_settings">Settings</string>
    <string name="default_title">Dijoo Item Title</string>
    <string name="default_subtitle">Dijoo Item Subtitle</string>
    <string name="add_dijoo_menu_item">Add New Dijoo</string>
    <string name="title">Title</string>
    <string name="add_title_label">Title</string>
    <string name="category">Category</string>
    <string name="select_unit">How do you want to track?</string>
    <string name="add_dijoo_button">Add New Dijoo</string>
    <string name="location">Location</string>
    <string name="add">Add</string>

    <string name="firebase_url">https://luminous-inferno-8047.firebaseio.com/</string>

    <string name="action_logout">Logout</string>

    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="login_with_password">Login with Password</string>
    <string name="login_anonymously">Login Anonymously</string>

    //Twitter

    <string name="twitter_consumer_secret">SECTET</string>
    <string name="twitter_consumer_key">twitterKey</string>
    <string name="RC_TWITTER_LOGIN">RCTLogin</string>


</resources>
