<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
       />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_dijoo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            >

            <EditText
                android:id="@+id/addTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="textCapWords"
                 />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_dijoo_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_dijoo_title"
            android:layout_centerHorizontal="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            >

            <EditText
                android:id="@+id/addCategoryEditText"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                android:inputType="textCapWords"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_dijoo_units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_dijoo_category"
            android:layout_centerHorizontal="true"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            >

            <EditText
                android:id="@+id/addUnitsEditText"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Units"
                android:inputType="textCapWords"
                />
        </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/input_dijoo_units"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/cancel"
        android:layout_gravity="end"/>

        <Button
            android:id="@+id/add_submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add"
            android:layout_gravity="end"/>
    </LinearLayout>
</RelativeLayout>