<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:weightSum="8"
    android:padding="16dp"

    >

    <RelativeLayout
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/dijoo_list_item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/dijoo_title_letter"
            android:adjustViewBounds="true"
            android:background="@drawable/dijoo_circle"
            android:gravity="center"
            android:maxLines="1"
            android:text=""
            android:textAllCaps="true"
            android:textColor="@color/material_green_50"
            android:textSize="22sp"

            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        >

        <TextView
            android:id="@+id/dijooItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            />

        <TextView
            android:id="@+id/dijooItemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_subtitle"
            android:textSize="14sp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="20dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/units_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Times"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:textSize="12sp"
            android:maxLines="1"
            />


        <TextView
            android:id="@+id/total_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:maxLines="1"
            />

    </LinearLayout>


</LinearLayout>